Aggiornamento al sito

--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@
         <div class="dropdown-mobile">
             <div class="container-nav-1-mob"><a class="nav-mob" href="#titoloFar" id="chiSiamo2">Chi siamo</a></div>
             <div class="container-nav-2-mob"><a class="nav-mob"   href="#ubi-title" id="doveSiamo2">Dove Trovarci</a></div>
+            <div class="container-nav-3-mob"><a class="nav-mob"   href="pages/prodEst.html" id="prodottiEsteri2">Prodotti Esteri</a></div>
         </div>
         <div class="container-navbar">
             <a id="logo" href="#"><img id="logo-image" src="images/logo.png"></a>
             <div class="container-nav-1"><a class="nav" href="#titoloFar" id="chiSiamo">Chi siamo</a></div>
             <div class="container-nav-2"><a class="nav" href="#locLink" id="doveSiamo">Dove Trovarci</a></div>
+            <div class="container-nav-3"><a class="nav" href="pages/prodEst.html" id="prodottiEsteri">Prodotti Esteri</a></div>
         </div>
         <div id="immagine-container">
             <div class="container-dyntext">
