--- a/index.html
+++ b/index.html
@@ -18,27 +18,14 @@
         <script src="languages.js"></script>    
     </head>
     <body>
-
         <ul class="languages">
-            <li class="lang22" id="italy"><img style="width: 55px; height:33px;" src="images/italy.png"></li>
-            <li class="lang22" id="english"><img style="width: 55px; height:33px;" src="images/england.png"></li>
-            <li class="lang22" id="russian"><img style="width: 55px; height:33px;" src="images/russia.png"></li>
-            <li class="lang22" id="ukrainian"><img style="width: 55px; height:33px;" src="images/ukr.png"></li>
+            <li class="lang22" id="italy"><img class="bordered" style="width: 55px; height:33px;" src="images/italy.png"></li>
+            <li class="lang22" id="english"><img class="bordered" style="width: 55px; height:33px;" src="images/england.png"></li>
+            <li class="lang22" id="russian"><img class="bordered" style="width: 55px; height:33px;" src="images/russia.png"></li>
+            <li class="lang22" id="ukrainian"><img class="bordered" style="width: 55px; height:33px;" src="images/ukr.png"></li>
         </ul>
         <div class="logo-phone-container">
             <a id="logo-phone" href="#"><img id="logo-image" src="images/logo.png"></a>
-        </div>
-        <div class="toggle-button-container">
-            <a href="#" class="toggle-button">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </a>
-        </div>
-        <div class="dropdown-mobile">
-            <div class="container-nav-3-mob"><a class="nav-mob"   href="pages/prodEst.html" id="prodottiEsteri2">Prodotti Esteri</a></div>
-            <div class="container-nav-1-mob"><a class="nav-mob" href="#titoloFar" id="chiSiamo2">Chi siamo</a></div>
-            <div class="container-nav-2-mob"><a class="nav-mob"   href="#ubi-title" id="doveSiamo2">Dove Trovarci</a></div>
         </div>
         <div class="container-navbar">
             <a id="logo" href="#"><img id="logo-image" src="images/logo.png"></a>
@@ -46,6 +33,20 @@
             <div class="container-nav-1"><a class="nav" href="#titoloFar" id="chiSiamo">Chi siamo</a></div>
             <div class="container-nav-2"><a class="nav" href="#locLink" id="doveSiamo">Dove Trovarci</a></div>
         </div>
+		<div id="small-nav">
+			<div class="toggle-button-container">
+				<a href="#" class="toggle-button">
+					<span class="bar"></span>
+					<span class="bar"></span>
+					<span class="bar"></span>
+				</a>
+			</div>
+			<div class="dropdown-mobile">
+				<div class="container-nav-3-mob"><a class="nav-mob"   href="pages/prodEst.html" id="prodottiEsteri2">Prodotti Esteri</a></div>
+				<div class="container-nav-1-mob"><a class="nav-mob" href="#titoloFar" id="chiSiamo2">Chi siamo</a></div>
+				<div class="container-nav-2-mob"><a class="nav-mob"   href="#ubi-title" id="doveSiamo2">Dove Trovarci</a></div>
+			</div>
+		</div>
         <div id="immagine-container">
             <div class="container-dyntext">
                 <h1><span class="auto-type"></span></h1>
@@ -58,10 +59,10 @@
                         <path d="M16.2426 6.34317L14.8284 4.92896L7.75739 12L14.8285 19.0711L16.2427 17.6569L10.5858 12L16.2426 6.34317Z" fill="#3C922F" />
                     </svg>
                 </div>
-                <img src="foto/slider-resized1.png" alt="fleur violette" id="carousel-item-0" class="carousel-item">
-                <img src="foto/slider-resized2.png" alt="maison" id="carousel-item-1" class="carousel-item" width="100%" style="display: none;">
-                <img src="foto/slider-resized3.png" alt="furet" id="carousel-item-2" class="carousel-item" width="100%" style="display: none;">
-                <img src="foto/slider-resized4.png" alt="skate" id="carousel-item-3" class="carousel-item" width="100%" style="display: none;">
+                <img src="foto/slider-resized1.png" alt="fleur violette" id="carousel-item-0" class="carousel-item bordered">
+                <img src="foto/slider-resized2.png" alt="maison" id="carousel-item-1" class="carousel-item bordered" width="100%" style="display: none;">
+                <img src="foto/slider-resized3.png" alt="furet" id="carousel-item-2" class="carousel-item bordered" width="100%" style="display: none;">
+                <img src="foto/slider-resized4.png" alt="skate" id="carousel-item-3" class="carousel-item bordered" width="100%" style="display: none;">
                 <div id="carousel-bouton-droite">
                     <svg width="100%" height="100%" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M10.5858 6.34317L12 4.92896L19.0711 12L12 19.0711L10.5858 17.6569L16.2427 12L10.5858 6.34317Z" fill="#3C922F" />
@@ -75,7 +76,11 @@
                 </p>
             </div>
         </div>
-        <div class="locationContainer">
+		<div class="image-flex-container">
+		  <img src="images/sorrento0.webp" alt="Description1" class="flex-item bordered">
+		  <img src="images/sorrento1.webp" alt="Description2" class="flex-item bordered">
+		</div>
+		<div class="locationContainer">
             <div class="colombia">
                 <ul id="ciao">
                     <li id="locLink" class="titoloFar2">
@@ -144,7 +149,7 @@
     <script src="pages/storia_trad.js"></script>
     <script>
         var typed= new Typed(".auto-type",{
-            strings: ["Alimentari","Salumi","Panini", "Snack","Bevande", "Prodotti esteri"],
+            strings: ["Prodotti Ucraini Moldavi e Polacchi", "Prodotti Italiani", "Bevande", "Panini", "Salumi"],
             typeSpeed: 60,
             backSpeed: 40,
             loop: true
